--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,8 +11,41 @@
 {{! the default angularjs delimeters - https://mustache.github.io/mustache.5.html for more info }}
 {{=<% %>=}}
 
-Teacher's Pet <br/>
-{{message}}
+<div style="text-align: center">
+    Welcome to Teacher's Pet
+</div>
+
+<span ng-if="!loginContainer">
+    <div>
+        <h3>Login:</h3>
+        Email: <input type="text" ng-model="loginEmail"/> <br/>
+        Password: <input type="text" ng-model="loginPassword"/> <br/>
+        <input type="button" ng-click="login(loginEmail, loginPassword)" value="Login"/> <br/><br/>
+    </div>
+
+    - or -
+
+    <div>
+        <h3>Register:</h3>
+        First Name: <input type="text" ng-model="registerFirstName"/> <br/>
+        Last Name: <input type="text" ng-model="registerLastName"/> <br/>
+        Email: <input type="text" ng-model="registerEmail"/> <br/>
+        Password: <input type="text" ng-model="registerPassword"/> <br/>
+        School: <input type="text" ng-model="registerSchool"/> <br/>
+        <input type="button" ng-click="register(registerFirstName, registerLastName, registerEmail, registerPassword, registerSchool)" value="Register"/>
+    </div>
+</span>
+
+<span ng-if="loginContainer != null">
+    <span ng-if="!loginSuccessful">
+        Your login was not successful. <input type="button" ng-click="home()" value="Try again"/>
+    </span>
+
+    <span ng-if="loginSuccessful">
+        Welcome, {{teacherWhoIsLoggedIn.firstName}} {{teacherWhoIsLoggedIn.lastName}}! <br/>
+    </span>
+
+</span>
 
 </body>
 </html>
