Hardcoded add class front-end

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,7 +42,16 @@
     </span>
 
     <span ng-if="loginSuccessful">
-        Welcome, {{teacherWhoIsLoggedIn.firstName}} {{teacherWhoIsLoggedIn.lastName}}! <br/>
+        Welcome, {{teacherWhoIsLoggedIn.firstName}} {{teacherWhoIsLoggedIn.lastName}}! <br/><br/>
+        <h3>Add a class: </h3>
+        <!--Name: <input type="text" ng-model="newClassName"/>-->
+        <!--Subject: <input type="text" ng-model="newClass"/>-->
+        <!--Grade Level:-->
+        <input type="button" ng-click="addClass()" value="Add class"/> <br/>
+        <div>
+            <h2>My Classes: </h2>
+
+        </div>
     </span>
 
 </span>
