--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -65,6 +65,12 @@
                     <li>{{assmt.name}}, due on {{assmt.dueDate}} </li>
                 </span>
             </ul>
+            <br/>
+
+            <h3>Add an assignment: </h3>
+            Name: <input type="text" ng-model="newAssignmentName"/> <br/>
+            Due date: <input type="text" ng-model="newAssignmentDate"/> <br/>
+            <input type="button" ng-click="addAssignment(newAssignmentName, newAssignmentDate)" value="Add Assignment"/> <br/>
         </div>
     </span>
 
