--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -59,6 +59,21 @@
         </div>
 
         <div ng-if="currentClass">
+            <h3>{{currentClass.name}}'s students: </h3>
+            <ul>
+                <span ng-repeat="student in allStudents">
+                    <li>{{student.firstName}} {{student.lastName}} </li>
+                </span>
+            </ul>
+            <br/>
+
+            <h3>Add a student to {{currentClass.name}}: </h3>
+            Student first name: <input type="text" ng-model="newStudentFirstName"/> <br/>
+            Last name: <input type="text" ng-model="newStudentLastName"/> <br/>
+            Parent email: <input type="text" ng-model="newStudentParentEmail"/> <br/>
+            <input type="button" ng-click="addStudent(newStudentFirstName, newStudentLastName, newStudentParentEmail)" value="Add Student"/> <br/>
+
+            <br/><br/>
             <h3>{{currentClass.name}}'s assignments: </h3>
             <ul>
                 <span ng-repeat="assmt in allAssignments">
@@ -68,7 +83,7 @@
             <br/>
 
             <h3>Add an assignment: </h3>
-            Name: <input type="text" ng-model="newAssignmentName"/> <br/>
+            Assignment name: <input type="text" ng-model="newAssignmentName"/> <br/>
             Due date: <input type="text" ng-model="newAssignmentDate"/> <br/>
             <input type="button" ng-click="addAssignment(newAssignmentName, newAssignmentDate)" value="Add Assignment"/> <br/>
         </div>
