--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -59,13 +59,13 @@
         </div>
 
         <div ng-if="currentClass">
-            <h3>{{currentClass.name}}'s students: </h3>
-            <ul>
-                <span ng-repeat="student in allStudents">
-                    <li>{{student.firstName}} {{student.lastName}} </li>
-                </span>
-            </ul>
-            <br/>
+            <!--<h3>{{currentClass.name}}'s students: </h3>-->
+            <!--<ul>-->
+                <!--<span ng-repeat="student in allStudents">-->
+                    <!--<li>{{student.firstName}} {{student.lastName}} </li>-->
+                <!--</span>-->
+            <!--</ul>-->
+            <!--<br/>-->
 
             <h3>Add a student to {{currentClass.name}}: </h3>
             Student first name: <input type="text" ng-model="newStudentFirstName"/> <br/>
@@ -74,18 +74,32 @@
             <input type="button" ng-click="addStudent(newStudentFirstName, newStudentLastName, newStudentParentEmail)" value="Add Student"/> <br/>
 
             <br/><br/>
-            <h3>{{currentClass.name}}'s assignments: </h3>
-            <ul>
-                <span ng-repeat="assmt in allAssignments">
-                    <li>{{assmt.name}}, due on {{assmt.dueDate}} </li>
-                </span>
-            </ul>
-            <br/>
+            <!--<h3>{{currentClass.name}}'s assignments: </h3>-->
+            <!--<ul>-->
+                <!--<span ng-repeat="assmt in allAssignments">-->
+                    <!--<li>{{assmt.name}}, due on {{assmt.dueDate}} </li>-->
+                <!--</span>-->
+            <!--</ul>-->
+            <!--<br/>-->
 
             <h3>Add an assignment: </h3>
             Assignment name: <input type="text" ng-model="newAssignmentName"/> <br/>
             Due date: <input type="text" ng-model="newAssignmentDate"/> <br/>
             <input type="button" ng-click="addAssignment(newAssignmentName, newAssignmentDate)" value="Add Assignment"/> <br/>
+
+
+
+
+            <!-- Gradebook table -->
+            <table>
+                  <tr ng-repeat="studentContainer in gradebookContainer">
+                    <td>{{ studentContainer.student.firstName }} {{ studentContainer.student.lastName }}</td>
+                    <td ng-repeat="studentAssignment in studentContainer.studentAssignments">{{ studentAssignment.grade }}</td>
+                  </tr>
+            </table>
+
+
+
         </div>
     </span>
 
