--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -53,7 +53,7 @@ th {
         Your login was not successful. <input type="button" ng-click="home()" value="Try again"/>
     </span>
 
-    <span ng-if="loginSuccessful">
+    <!--<span ng-if="loginSuccessful">-->
         <!--Welcome, {{teacherWhoIsLoggedIn.firstName}} {{teacherWhoIsLoggedIn.lastName}}! <br/><br/>-->
         <!--<h3>Add a class: </h3>-->
         <!--Name: <input type="text" ng-model="newClassName"/> <br/>-->
