--- a/src/main/resources/templates/oldhome.html
+++ b/src/main/resources/templates/oldhome.html
@@ -88,7 +88,72 @@ th {
 
         </div>
 
+        <div ng-if="currentClass">
+            <!--<h3>{{currentClass.name}}'s students: </h3>-->
+            <!--<ul>-->
+            <!--<span ng-repeat="student in allStudents">-->
+            <!--<li>{{student.firstName}} {{student.lastName}} </li>-->
+            <!--</span>-->
+            <!--</ul>-->
+            <!--<br/>-->
 
+            <h3>Add a student to {{currentClass.name}}: </h3>
+            Student first name: <input type="text" ng-model="newStudentFirstName"/> <br/>
+            Last name: <input type="text" ng-model="newStudentLastName"/> <br/>
+            Parent email: <input type="text" ng-model="newStudentParentEmail"/> <br/>
+            <input type="button" ng-click="addStudent(newStudentFirstName, newStudentLastName, newStudentParentEmail)" value="Add Student"/> <br/>
+
+            <br/><br/>
+            <!--<h3>{{currentClass.name}}'s assignments: </h3>-->
+            <!--<ul>-->
+            <!--<span ng-repeat="assmt in allAssignments">-->
+            <!--<li>{{assmt.name}}, due on {{assmt.dueDate}} </li>-->
+            <!--</span>-->
+            <!--</ul>-->
+            <!--<br/>-->
+
+            <h3>Add an assignment: </h3>
+            Assignment name: <input type="text" ng-model="newAssignmentName"/> <br/>
+            Due date: <input type="text" ng-model="newAssignmentDate"/> <br/>
+            <input type="button" ng-click="addAssignment(newAssignmentName, newAssignmentDate)" value="Add Assignment"/> <br/>
+
+
+
+            <table>
+                <tr>
+                    <td></td>
+                    <td ng-repeat="currentAssignment in allAssignments"> {{currentAssignment.name}} </td>
+
+                <tr ng-repeat="studentContainer in gradebookContainer.studentContainers">
+                    <td>{{ studentContainer.student.firstName }} {{ studentContainer.student.lastName }}</td>
+
+                    <td ng-repeat="studentAssignment in studentContainer.studentAssignments"> <input type="number" ng-model="studentAssignment.grade" ng-keyup="storeGrades"> </td>
+                </tr>
+
+                <tr>
+                    <td> <input type="button" ng-click="" value="Add student (coming soon)"/> </td>
+
+                    <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index"> <input type="button" ng-click="addGrades(allAssignments[$index], gradebookContainer.studentContainers)" value="Send grades"/> </td>
+
+                </tr>
+
+                <tr>
+                    <td> </td>
+                    <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index"> <input type="button" ng-click="curveFlat(allAssignments[$index], gradebookContainer.studentContainers)" value="Flat curve"/> </td>
+                </tr>
+
+
+                <tr>
+                    <td> </td>
+                    <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index"> <input type="button" ng-click="curveAsPercentageOfHighestGrade(allAssignments[$index], gradebookContainer.studentContainers)" value="Percentage of highest curve (coming soon)"/> </td>
+
+                </tr>
+            </table>
+
+
+
+        </div>
+    </span>
 
 </span>
 
