--- a/src/main/resources/templates/addass.html
+++ b/src/main/resources/templates/addass.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Teacher's Pet</title>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script src="js/ng-controller.js"></script>
+    <script src="js/ng1-controller.js"></script>
     <style>
 table, th, td {
     border: 1px solid black;
