--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -76,8 +76,11 @@ th {
                 </span>
             </ol>
 
+            <input type="button" ng-click="" value="Add class (coming soon)"/>
         </div>
+        <br/><br/><br/>
 
+        *** We'll make the form below a pop-up that only shows when we click "Add class" above ***
         <div>
 
         <h3>Add a class: </h3>
