--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -97,6 +97,12 @@ th {
 
                 <tr>
                     <td> </td>
+
+                    <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index"> <input type="button" ng-click="getAverage(allAssignments[$index], gradebookContainer.studentContainers)" value="Get Average"/> </td>
+                </tr>
+
+                <tr>
+                    <td> </td>
                     <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index"> <input type="button" ng-click="curveFlat(allAssignments[$index], gradebookContainer.studentContainers)" value="Flat curve"/> </td>
                 </tr>
 
@@ -110,6 +116,9 @@ th {
                     <td ng-repeat="i in getNumberOfAssignments(numberOfAssignments) track by $index"> <input type="button" ng-click="curveByTakingRoot(allAssignments[$index], gradebookContainer.studentContainers)" value="Square root curve (coming soon)"/> </td>
                 </tr>
             </table>
+
+<br/><br/>
+Average: {{average}}
 
 
 
