--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -41,10 +41,26 @@ th {
 
 <span ng-if="!loginContainer">
     <div>
-        <h3>Login:</h3>
-        Email: <input type="text" ng-model="loginEmail"/> <br/>
-        Password: <input type="text" ng-model="loginPassword"/> <br/>
-        <input type="button" ng-click="login(loginEmail, loginPassword)" value="Login"/> <br/><br/>
+
+        <!--<h3>Login:</h3>-->
+        <!--Email: <input type="text" ng-model="loginEmail"/> <br/>-->
+        <!--Password: <input type="text" ng-model="loginPassword"/> <br/>-->
+        <!--<input type="button" ng-click="login(loginEmail, loginPassword)" value="Login"/> <br/><br/>-->
+
+
+        <form class="form-inline">
+        <div class="form-group">
+         <label for="inputPassword4">Password</label>
+            <h3>Login:</h3>
+            Email: <input type="text" ng-model="loginEmail"/> <br/>
+            Password: <input type="password" id="inputPassword4" class="form-control" ng-model="loginPassword" /> <br/>
+            <input type="button" ng-click="login(loginEmail, loginPassword)" value="Login"/> <br/><br/>
+            <small id="passwordHelpInline" class="text-muted">
+                Must be 8-20 characters long.
+            </small>
+        </div>
+</form>
+
     </div>
 
     - or -
