Averages working but in wrong order on front-end

--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -106,7 +106,7 @@ th {
                 <tr>
                     <td> </td>
 
-                    <td ng-repeat="studentContainer in gradebookContainer."> {{studentContainer.average}} </td>
+                    <td ng-repeat="assignmentAndAverageContainer in gradebookContainer.assignmentAndAverageContainers"> Average: {{assignmentAndAverageContainer.average}} </td>
                 </tr>
 
                 <tr>
