--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -106,7 +106,8 @@ th {
                 <tr>
                     <td> </td>
 
-                    <td ng-repeat="assignmentAndAverageContainer in gradebookContainer.assignmentAndAverageContainers"> Average: {{assignmentAndAverageContainer.average}} </td>
+                    <!--<td ng-repeat="assignmentAndAverageContainer in gradebookContainer.assignmentAndAverageContainers"> Average: {{assignmentAndAverageContainer.average}} </td>-->
+                    <td ng-repeat="currentAverage in assignmentAveragesArray"> Average: {{currentAverage}} </td>
                 </tr>
 
                 <tr>
@@ -126,7 +127,6 @@ th {
             </table>
 
 <br/><br/>
-Average: {{average}}
 
 
 
