--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -143,7 +143,7 @@ th {
             <br/><br/><br/>
             <h3>Add an assignment: </h3>
             Assignment name: <input type="text" ng-model="newAssignmentName"/> <br/>
-            Due date: <input type="text" ng-model="newAssignmentDate"/> <br/>
+            Due date: <input type="date" ng-model="newAssignmentDate"/> <br/>
             <input type="button"  ng-click="addAssignment(newAssignmentName, newAssignmentDate)" value="Add Assignment"/> <br/>
 
 
