--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="TeachersPetApp">
 <head>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
     <title>Teacher's Pet</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+    <!--<link rel="stylesheet" type="text/css" href="styles.css">-->
     <style>
 table, th, td {
     border: 1px solid black;
@@ -130,6 +134,117 @@ th {
 
 <br/><br/>
 
+<div class="container">
+    <h2></h2>
+    <!-- Trigger the modal with a button -->
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add Assignment</button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Add assignment</h4>
+                </div>
+                <div class="modal-body">
+                    <div>
+
+
+                        Assignment name: <input type="text" ng-model="newAssignmentName"/> <br/>
+                        Due date: <input type="date" ng-model="newAssignmentDate"/> <br/>
+                        <input type="button"  ng-click="addAssignment(newAssignmentName, newAssignmentDate)" value="Add Assignment"/> <br/>
+
+
+
+                    </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+
+
+<!--<div class="container1">-->
+    <!--<h2></h2>-->
+    <!--&lt;!&ndash; Trigger the modal with a button &ndash;&gt;-->
+    <!--<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add Student</button>-->
+
+    <!--&lt;!&ndash; Modal &ndash;&gt;-->
+    <!--<div class="modal fade" id="myModal1" role="dialog">-->
+        <!--<div class="modal-dialog">-->
+
+            <!--&lt;!&ndash; Modal content&ndash;&gt;-->
+            <!--<div class="modal-content1">-->
+                <!--<div class="modal-header1">-->
+                    <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
+                    <!--<h4 class="modal-title">Add Student</h4>-->
+                <!--</div>-->
+                <!--<div class="modal-body1">-->
+                    <!--<div>-->
+
+
+
+                        <!--Student first name: <input type="text" ng-model="newStudentFirstName"/> <br/>-->
+                        <!--Last name: <input type="text" ng-model="newStudentLastName"/> <br/>-->
+                        <!--Parent email: <input type="text" ng-model="newStudentParentEmail"/> <br/>-->
+                        <!--<input type="button" ng-click="addStudent(newStudentFirstName, newStudentLastName, newStudentParentEmail)" value="Add Student"/> <br/>-->
+
+
+
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="modal-footer">-->
+                <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
+            <!--</div>-->
+        <!--</div>-->
+
+    <!--</div>-->
+<!--</div>-->
+
+<!--</div>-->
+
+
+
+
+
+    <!--<div class="dropdown">-->
+        <!--<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">-->
+            <!--Add Assignment-->
+            <!--<span class="caret"></span>-->
+        <!--</button>-->
+        <!--<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">-->
+           <!--<div>-->
+
+               <!--Assignment name: <input type="text" ng-model="newAssignmentName"/> <br/>-->
+               <!--Due date: <input type="date" ng-model="newAssignmentDate"/> <br/>-->
+               <!--<input type="button"  ng-click="addAssignment(newAssignmentName, newAssignmentDate)" value="Add Assignment"/> <br/>-->
+
+           <!--</div>-->
+
+
+
+            <!--&lt;!&ndash;<li ng-repeat="currentAssignment in allAssignments"><a href="#">{{currentAssignment.name}}</a></li>&ndash;&gt;-->
+        <!--</ul>-->
+        <!--</button>-->
+    <!--</div>-->
+
+
+
+
+
+
+
 
 
 
@@ -141,11 +256,11 @@ th {
             Parent email: <input type="text" ng-model="newStudentParentEmail"/> <br/>
             <input type="button" ng-click="addStudent(newStudentFirstName, newStudentLastName, newStudentParentEmail)" value="Add Student"/> <br/>
 
-            <br/><br/><br/>
-            <h3>Add an assignment: </h3>
-            Assignment name: <input type="text" ng-model="newAssignmentName"/> <br/>
-            Due date: <input type="date" ng-model="newAssignmentDate"/> <br/>
-            <input type="button"  ng-click="addAssignment(newAssignmentName, newAssignmentDate)" value="Add Assignment"/> <br/>
+            <!--<br/><br/><br/>-->
+            <!--<h3>Add an assignment: </h3>-->
+            <!--Assignment name: <input type="text" ng-model="newAssignmentName"/> <br/>-->
+            <!--Due date: <input type="date" ng-model="newAssignmentDate"/> <br/>-->
+            <!--<input type="button"  ng-click="addAssignment(newAssignmentName, newAssignmentDate)" value="Add Assignment"/> <br/>-->
 
 
 
@@ -157,32 +272,6 @@ th {
 
 
 
-<!--<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">-->
-    <!--<div class="modal-dialog" role="document">-->
-        <!--<div class="modal-content">-->
-            <!--<div class="modal-header">-->
-                <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
-                <!--<h4 class="modal-title" id="exampleModalLabel">New message</h4>-->
-            <!--</div>-->
-            <!--<div class="modal-body">-->
-                <!--<form>-->
-                    <!--<div class="form-group">-->
-                        <!--<label for="recipient-name" class="control-label">Recipient:</label>-->
-                        <!--<input type="text" class="form-control" id="recipient-name">-->
-                    <!--</div>-->
-                    <!--<div class="form-group">-->
-                        <!--<label for="message-text" class="control-label">Message:</label>-->
-                        <!--<textarea class="form-control" id="message-text"></textarea>-->
-                    <!--</div>-->
-                <!--</form>-->
-            <!--</div>-->
-            <!--<div class="modal-footer">-->
-                <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
-                <!--<button type="button" class="btn btn-primary">Send message</button>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
 
 
 
