--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -20,11 +20,18 @@ th, td {
 }
 th {
     text-align: left;
+
 }
+
+button{
+float: right;
+
+}
+
 
 </style>
 </head>
-<body ng-controller="GradebookController">
+<body ng-controller="GradebookController" background-color=blue>
 {{! changing the mustache delimiter so it doesn't conflict with }}
 {{! the default angularjs delimeters - https://mustache.github.io/mustache.5.html for more info }}
 {{=<% %>=}}
