--- a/src/main/resources/templates/practice.html
+++ b/src/main/resources/templates/practice.html
@@ -1,41 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <style>
+         #multibackground {
+            background-image: url(/css/images/logo.png), url(/css/images/border.png);
+            background-position: left top, left top;
+            background-repeat: no-repeat, repeat;
+            padding: 75px;
+         }
+      </style>
+
 </head>
 <body>
 
-<div class="container">
-    <h2>Modal Example</h2>
-    <!-- Trigger the modal with a button -->
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
-
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
+<div id="multibackground">
+    <h1>www.tutorialspoint.com</h1>
+    <p>Tutorials Point originated from the idea that there exists a class of  readers who respond better to online content and prefer to learn new skills at
+        their own pace from the comforts of their drawing rooms. The journey commenced with a single tutorial on HTML in  2006 and elated by the response it generated,
+        we worked our way to adding fresh tutorials to our repository which now proudly flaunts a wealth of tutorials and allied articles on
+        topics ranging from programming languages to web designing to academics and much more..</p>
 </div>
 
 </body>
